--- a/Tests/Functional/app/config/framework.yml
+++ b/Tests/Functional/app/config/framework.yml
@@ -2,8 +2,8 @@ framework:
     secret: test
     router: { resource: "%kernel.root_dir%/config/routing.yml" }
     test: ~
-    form: ~
-    csrf_protection: ~
+    form:
+        csrf_protection: ~
     session:
         storage_id: session.storage.mock_file
     default_locale: en
